# httpie-nifcloud-authv4

./: LICENSE  Makefile  Pipfile  README.md  README.rst  httpie_aws_authv4.py  pyproject.toml  setup.cfg  setup.py
src/: httpie_nifcloud_authv4.py
