[tool.poetry]
name = "httpie-nifcloud-authv4"
version = "0.1.0"
description = "AWS/NIFCLOUD Auth v4 plugin for HTTPie"
authors = ["kzmake <kzmake.i3a@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/kzmake/httpie-nifcloud-authv4"
repository = "https://github.com/kzmake/httpie-nifcloud-authv4"
keywords = ["httpie", "nifcloud", "aws", "plugin", "auth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Environment :: Plugins",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"
httpie = "^2.0.0"
aws-requests-auth = "^0.4.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']

[tool.poetry.plugins."httpie.plugins.auth.v1"]
httpie_aws_authv4 = "httpie_nifcloud_authv4:AWSv4AuthPlugin"
httpie_nifcloud_authv4 = "httpie_nifcloud_authv4:NIFCLOUDv4AuthPlugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
